--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.6.12"
+        "sass-loader": "^8.0.0"
     },
     "dependencies": {}
 }
